# DQ3AP

./: .gitattributes  .gitignore  CMakeLists.txt  DRAGON QUEST III HD-2D Remake.lnk  README.md
LuaScript/: DQ3AP.lua  EventScript_D02_NajimiTower_Penthouse.lua  EventScript_D04_ShampaneTower_4F.lua  EventScript_D05_UndergroundLake_B4F.lua  EventScript_D06_Pyramid_3F.lua  EventScript_T01_Reeve_House2_2F.lua  EventScript_T11_ElfVillage_House.lua  FieldTransitionScript.lua  Nicola_EventCommandLibrary.lua  Nicola_EventCommonScript.lua  Nicola_EventLibrary.lua  Nicola_InnCommonScript.lua
LuaScript/LuaEvents/: EventScript_C01_Aliahan_Castle_2F.lua  EventScript_C04_Portoga_Castle_1F.lua  EventScript_C04_Portoga_Out.lua  EventScript_C05_Dharma_1F.lua  EventScript_C06_Jipang_House3.lua  EventScript_C06_Jipang_Room.lua  EventScript_C07_Edinbear_Castle_B1FB.lua  EventScript_C08_Samanosa_Castle_1F.lua  EventScript_C09_DragonQueen_Queen_room.lua  EventScript_C10_Ludatorm_Castle_2F_hidden_room.lua  EventScript_C11_Mercado_Shop02_2F.lua  EventScript_D02_NajimiTower_Penthouse.lua  EventScript_D03_IzanaiCave_B1F_before.lua  EventScript_D04_ShampaneTower_4F.lua  EventScript_D05_UndergroundLake_B4F.lua  EventScript_D06_Pyramid_3F.lua  EventScript_D09_GaiaNavel_B3F.lua  EventScript_D09_GaiaNavel_B4F.lua  EventScript_D12_RaCave_B3.lua  EventScript_D13_GhostShip_B1.lua  EventScript_D18_RubissTower_5FA.lua  EventScript_D19_ZomaCastle_B5F.lua  EventScript_D21_SecretTower_5F.lua  EventScript_D22_GranDragon_07_Snake.lua  EventScript_H12_ShallowShrine_B1F.lua  EventScript_H13_HobbitShrine_1F.lua  EventScript_H15_ShrinePrison_1F.lua  EventScript_H16_Reiamuland_Out.lua  EventScript_H17_Greenlad_House.lua  EventScript_H18_NecrogondShrine_House.lua  EventScript_H21_WestPort_Out.lua  EventScript_H24_SpiritShrine_2F.lua  EventScript_H25_HolyShrine_2F.lua  EventScript_T01_Reeve_House2_2F.lua  EventScript_T04_Ashalam_Theater.lua  EventScript_T05_Baharata_Out.lua  EventScript_T08_Domdora_Out.lua  (+7 more)
include/: APClient.h  Commands.h  Logger.h  WorldData.h
src/: APClient.cpp  Commands.cpp  Logger.cpp  WorldData.cpp  dllmain.cpp
(+8 files in other folders)
